Cycles 3D View Pause Button Does not Work while Rendering #35121

Closed
opened 2013-04-28 00:58:02 +02:00 by gandalf3 · 4 comments
Member

%%%--- Operating System ---

Reproducible on multiple systems. (linux)

- Blender version with error ---

Fails on both the 2.66a standard release and the latest (r56340) SVN build from builder.blender.org/download.

- Short description of error ---

cannot pause cycles 3D viewport preview render while rendering with the normal f12 render.

- Steps for others to reproduce the error (based on attached .blend file) ---

Start the 3D view port render
Start the normal f12 render
Now if you try pausing the viewport render, it won't pause. However, you can pause after the f12 render is finished.%%%

%%%--- Operating System --- Reproducible on multiple systems. (linux) - Blender version with error --- Fails on both the 2.66a standard release and the latest (r56340) SVN build from builder.blender.org/download. - Short description of error --- cannot pause cycles 3D viewport preview render while rendering with the normal f12 render. - Steps for others to reproduce the error (based on attached .blend file) --- Start the 3D view port render Start the normal f12 render Now if you try pausing the viewport render, it won't pause. However, you can pause after the f12 render is finished.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Will ask Brecht if this is a simple fix.%%%

%%%Will ask Brecht if this is a simple fix.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35121
No description provided.