Fix #35121: cycles 3D viewport render pause button not working during render.