intern/cycles/blender/blender_session.cpp
@@ -501,6 +501,9 @@ void BlenderSession::synchronize()
 
 bool BlenderSession::draw(int w, int h)
 {
+	/* pause in redraw in case update is not being called due to final render */
+	session->set_pause(BlenderSync::get_session_pause(b_scene, background));
+
 	/* before drawing, we verify camera and viewport size changes, because
 	 * we do not get update callbacks for those, we must detect them here */
 	if(session->ready_to_reset()) {
